# proyecto-python

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose-develop.yml  docker-compose-tests.yml  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 020180a9a448_initial_migration.py  1cafbbac75cd_base_de_datos_final.py  4402797348f0_initial_migration.py  50dbb0ca5b10_update_restaurant_and_create_table_.py  58045af24b3c_add_tables_to_restaurant.py  819bcbef048d_create_menu_and_dish_tables.py  9c463eb6c456_update_table_name_user.py  c603b0767818_create_restaurant_table.py
src/: main.py
src/auth/application/encryptor/: encryptor.py
src/common/application/: __init__.py
src/common/domain/: __init__.py
src/common/infrastructure/: __init__.py
src/common/utils/: __init__.py  base_exception.py  base_exception_enum.py  custom_error.py  result.py
src/menu/domain/entities/: dish.py
src/menu/infrastructure/: dependencies.py
src/reservation/domain/: reserve.txt
test/: conftest.py
test/auth/: conftest.py  test_user_login.py  test_user_register.py
test/auth/dto/: user_register_request_mock_dto.py
test/menu/: conftest.py  test_create_dishes.py
test/reservation/: conftest.py  test_cancel_reservation.py  test_create_reservation copy.py  test_create_reservation.py  test_find_active_reservation.py  test_find_reservation.py  test_reservation_cancel.py  test_reservation_create.py
test/reservation/dto/: cancel_reservation_request_mock_dto.py  create_reservation_request_mock_dto.py
test/restaurant/: conftest.py  test_create_restaurant.py
(+302 files in other folders)
